# android_kernel_xiaomi_msm8996

./: .gitignore  .gitmodules  .travis.yml  Android.mk  AndroidKernel.mk  Kbuild  Kconfig  MAINTAINERS  Makefile  README  README.md  amap_smart.c  amap_smart.h  api.c  api.h  blkdev.c  build.sh  cache.c  config.h  core.c  core.h  core_exfat.c  core_fat.c  dfr.c  dfr.h  extent.c  fatent.c  gen_headers_arm.bp  gen_headers_arm64.bp  misc.c  mpage.c  nls.c  sdfat.c  sdfat.h  sdfat_fs.h  upcase.h  version.h  xattr.c
Documentation/: kernel-parameters.txt  memory-barriers.txt  rbtree.txt
arch/: Kconfig
block/: Kconfig.iosched  Makefile  bfq-iosched.c  bio.c  blk-cgroup.c  blk-core.c  blk-merge.c  blk-settings.c  blk-throttle.c  cfq-iosched.c  deadline-iosched.c  elevator.c  genhd.c  maple-iosched.c  row-iosched.c  sio-iosched.c  sioplus-iosched.c  tripndroid-iosched.c  zen-iosched.c
configs/: default_defconfig  qcs40x.tf.sdio.perf_defconfig
crypto/: Kconfig  ahash.c  testmgr.h
drivers/: Makefile
dtbtool/: dtbtool.c
firmware/: Makefile  cyttsp_button_no_shielding.fw.ihex  fte8716_auo_incell_biel_lithium.fw.ihex  fte8716_auo_incell_lens_lithium.fw.ihex  fte8716_sharp_incell_biel_lithium.fw.ihex  fte8716_sharp_incell_lens_lithium.fw.ihex  mXT640U13AA.fw.ihex  mXT641T30AC.fw.ihex  mxt_640u_lgd_config.fw.ihex  mxt_641t_sharp_config.fw.ihex  st_fts.fw.ihex  synaptics_jdi_3330_capricorn.fw.ihex  (+12 more)
tools/fwdebuglog/: Android.mk  Makefile  Makefile.am  cld-diag-parser.c  cld-diag-parser.h  cld-fwlog-netlink.c  cld-fwlog-parser.c  cld-fwlog-record.c  nan-parser.c  parser.c
(+2648 files in other folders)
